# stece

./: .gitignore  README.md  environment.yaml  pyproject.toml  test_EOF.ipynb  test_FIT.ipynb  test_osprey.ipynb  test_reader.ipynb
crjo/: __init__.py  copy_from_ece4_job.sh  create_new_ece4_job.sh  create_new_ece4_job.tmpl  create_new_job.sh  create_new_jobs.sh  experiment-config-amip.yml  experiment-config-cpld.yml  launch.sh  open_file.ipynb  yaml_util.py
ece4/: copy_from_ece4_job.sh  launch.sh  user-config.yml
epochal/: descriptor_generator.py  oifs_create_corners.py  oifs_generator.py  oifs_modifier.py  oifs_vertical_interpolation.sh  orca2_adapt.py  orca2_create.py  orca2_create.sh  rebuild-nemo.py  utils.py  vertical_test.sh
goat/: README.md  contour.ipynb  create_basin_mask_from_meshmask_eORCA1.py  eof.sh  goat_graphs.py  goat_io.py  goat_means.py  goat_plots.py  goat_time_series_mave.py  goat_tool.py  goat_tools.py  howmoller.ipynb  merge.sh  paths.yaml  run_goat.py  test.ipynb  test_aqua.ipynb  test_diagnostics.ipynb  test_fix0.ipynb  test_half.ipynb  test_new.ipynb  test_perm.ipynb  test_plots.ipynb  test_sr00.ipynb  test_ut00.ipynb  test_z001.ipynb
lobare/: lobare.py  paths.yaml  recap.py
lobs/: README.md  lobs.py  lobs_tools.py  lobster.py  paths.yaml  recap.txt  recap_nohead.txt  recap_old.txt  table_lobs.txt  test.ipynb  visualize.ipynb
lobster/: README.md  __init__.py  get_rss_usage.sh  get_sypd.sh  get_tres_usage.sh  lobster.py  scaling.txt  test.ipynb  test_scaling.ipynb
martini/: README.md  check_table.ipynb  functions.py  future_linear.py  (+52 more)
(+247 files in other folders)
